# pnc-banking-agent

./: .env.example  .gitignore  README.md  compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/changes/: customer_changes.csv  customers_snapshot.csv
data/chroma/: chroma.sqlite3
data/knowledge_base/: account_types.md  fee_schedule.md  fraud_reporting.md  mobile_deposit.md  wire_transfer_limits.md
data/lakehouse/silver/accounts/: .part-00000-290b8b7e-f61b-48b8-b5d6-4d16409f3caf-c000.snappy.parquet.crc  .part-00000-3440f303-f278-48af-b003-e4076f4b40d3-c000.snappy.parquet.crc  .part-00000-9742a648-44aa-4ce1-a558-4112d0bb484e-c000.snappy.parquet.crc  part-00000-290b8b7e-f61b-48b8-b5d6-4d16409f3caf-c000.snappy.parquet  part-00000-3440f303-f278-48af-b003-e4076f4b40d3-c000.snappy.parquet  (+1 more)
infra/db/: postgres-init.sql
scripts/: delta_lake_demo.py  generate_customer_changes.py  ingest_knowledge_base.py  run_local.py  run_silver_pipeline.py  seed_data.py  test_agent_with_policy.py  test_chunker.py  test_hybrid_retrieval.py  test_retrieval.py  test_spark_load.py
src/banking_agent/: agent.py  bedrock_client.py  config.py  mock_data.py  tools.py
src/banking_agent/data_pipeline/: load_from_postgres.py  silence_shutdown.py  spark_session.py  write_to_delta.py
src/banking_agent/rag/: chunker.py  embeddings.py  retrieval.py  vector_store.py
src/banking_agent/repositories/: __init__.py  account_repository.py  connection.py  conversation_repository.py  transaction_repository.py
tests/: test_tools.py
tests/unit/: test_tools.py
(+57 files in other folders)
