[project]
name = "banking-agent"
version = "0.1.0"
description = "Production-pattern customer service agent for retail banking, built on LangGraph and Amazon Bedrock"
requires-python = ">=3.11"
authors = [{name = "Bincy Sreenivasa"}]
license = {text = "MIT"}
readme = "README.md"

dependencies = [
    "langgraph>=0.2.50",
    "langchain-aws>=0.2.10",
    "boto3>=1.35.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]